[gd_scene load_steps=9 format=3 uid="uid://chd8pd3bcibmk"]

[ext_resource type="Script" uid="uid://bw552er7o6414" path="res://scrips/Game/player/skills/shield.gd" id="1_heoru"]
[ext_resource type="AnimationLibrary" uid="uid://bkqe34dsb7t4c" path="res://resource/AnimationRoot/Animation/Library/ShieldAnimation.res" id="2_exgyt"]
[ext_resource type="Texture2D" uid="uid://br287ryn6ie6h" path="res://asset/image/Skill/shield/shield_00000.png" id="3_a0msf"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://c1ypyydtijnd2" path="res://resource/AnimationRoot/shield_state_machine.tres" id="4_a0msf"]

[sub_resource type="Animation" id="Animation_a0msf"]
resource_name = "Idle"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.03333),
"transitions": PackedFloat32Array(0.435275, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_a0msf"), ExtResource("3_a0msf")]
}

[sub_resource type="Animation" id="Animation_heoru"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_est0k"]
_data = {
&"Idle": SubResource("Animation_a0msf"),
&"RESET": SubResource("Animation_heoru")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_umlee"]
radius = 70.0
height = 172.0

[node name="ShieldArea" type="Area2D" groups=["Shieldbox"]]
collision_layer = 32
collision_mask = 22
script = ExtResource("1_heoru")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_a0msf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_est0k"),
&"ShieldAnimation": ExtResource("2_exgyt")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(50, 4)
shape = SubResource("CapsuleShape2D_umlee")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = ExtResource("4_a0msf")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")

[node name="shield_start_timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="shield_start_timer2" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="shield_start_timer" to="." method="_on_shield_start_timer_timeout"]
[connection signal="timeout" from="shield_start_timer2" to="." method="_on_shield_start_timer_2_timeout"]
